# simpleaf

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.cs_orig  README.md  bump_and_publish.sh  dist-workspace.toml  release-please-config.json  release.sh  simpleaf_conda_env.yml
.cargo/: config.toml
.github/workflows/: release-please.yml  release-please.yml.bak  sanitize-cargo.yml  test_simpleaf.yml
docker/: Dockerfile  build_docker.sh
docs/: architecture-map.md  requirements.txt
docs/source/: add-chemistry-command.rst  chemistry-command.rst  conf.py  flex-quant-command.rst  get-workflow-config-command.rst  index-command.rst  index.rst  inspect-command.rst  install.rst  installation.rst  quant-command.rst  refresh-prog-info.rst  set-paths.rst  workflow-command.rst  workflow-get.rst  workflow-list.rst  workflow-patch.rst  workflow-refresh.rst  workflow-run.rst  workflow-utility-library.rst  workflow.rst
resources/: chemistries.json  chemistries.pending.json  custom_chemistries.json  permit_list_info.json
scripts/: refactor_safety_suite.sh  test_simpleaf.sh  test_simpleaf_local_integration.sh
src/: atac.rs  core.rs  defaults.rs  main.rs  simpleaf_commands.rs  utils.rs
src/atac/: commands.rs  defaults.rs  index.rs  map.rs  process.rs
src/core/: context.rs  exec.rs  index_meta.rs  io.rs  runtime.rs
src/simpleaf_commands/: chemistry.rs  flex_quant.rs  indexing.rs  inspect.rs  multiplex_quant.rs  paths.rs  quant.rs  refresh.rs  workflow.rs
src/utils/: af_utils.rs  chem_utils.rs  constants.rs  jrsonnet_main.rs  probe_utils.rs  prog_parsing_utils.rs  prog_utils.rs  remote.rs  workflow_utils.rs
src/utils/af_utils/: tests.rs
test_dh/alevin_fry_home/: simpleaf_info.json
tests/: cli_help_snapshots.rs  cli_smoke.rs  phase1_regressions.rs
tests/snapshots/cli-help/: simpleaf___help.txt  simpleaf_atac___help.txt  simpleaf_atac_index___help.txt  simpleaf_atac_process___help.txt  simpleaf_chemistry___help.txt  simpleaf_chemistry_add___help.txt  simpleaf_chemistry_clean___help.txt  simpleaf_chemistry_fetch___help.txt  simpleaf_chemistry_lookup___help.txt  simpleaf_chemistry_refresh___help.txt  simpleaf_chemistry_remove___help.txt  simpleaf_index___help.txt  simpleaf_inspect___help.txt  simpleaf_multiplex_quant___help.txt  simpleaf_quant___help.txt  simpleaf_refresh_prog_info___help.txt  simpleaf_set_paths___help.txt  simpleaf_workflow___help.txt  simpleaf_workflow_get___help.txt  simpleaf_workflow_list___help.txt  simpleaf_workflow_patch___help.txt  simpleaf_workflow_refresh___help.txt  simpleaf_workflow_run___help.txt
