[package]
name = "simpleaf"
version = "0.16.1"
edition = "2021"
authors = [
  "Rob Patro <rob@cs.umd.edu>",
  "Dongze He <dhe17@umd.edu>",
]
description = "A rust framework to make using alevin-fry even simpler."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/COMBINE-lab/simpleaf"
homepage = "https://github.com/COMBINE-lab/simpleaf"
#documentation = "https://alevin-fry.readthedocs.io/en/latest/"
include = [
  "/src/*.rs",
  "/src/utils/*.rs",
  "/src/simpleaf_commands/*.rs",
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/LICENSE",
]
keywords = [
  "single-cell",
  "preprocessing",
  "RNA-seq",
  "single-nucleus",
  "RNA-velocity",
]
categories = ["command-line-utilities", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
seq_geom_parser = { git = "https://github.com/COMBINE-lab/seq_geom_parser", branch = "dev", version = "0.3.0" }
seq_geom_xform = { git = "https://github.com/COMBINE-lab/seq_geom_xform", branch = "dev", version = "0.4.0" }
roers = { git = "https://github.com/COMBINE-lab/roers", branch = "main", version = "0.3.0" }
anyhow = "^1.0"
clap = { version = "4.4.18", features = ["derive", "cargo", "deprecated", "wrap_help", "help", "usage", "error-context"] } 
cmd_lib = "^1.9.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = true, features = ["env-filter"] }
semver = "^1.0.21"
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
time = {version = "^0.3.31", features = ["macros", "formatting", "parsing", "serde", "serde-human-readable"]}
which = "^6.0.0"
jrsonnet-evaluator = "0.5.0-pre95"
jrsonnet-cli = "0.5.0-pre95"
jrsonnet-parser = "0.5.0-pre95"
thiserror = "1.0"
phf = { version = "0.11.2", features = ["macros"] }
chrono = "0.4.33"
tabled = "0.15.0"
csv = "1.3.0"

[profile.release]
lto = "thin"
opt-level = 3
