[package]
name = "simpleaf"
version = "0.22.0"
edition = "2024"
authors = [
  "Rob Patro <rob@cs.umd.edu>",
  "Dongze He <dhe17@umd.edu>",
  "Noor Pratap Singh <npsingh@umd.edu>",
]
description = "A rust framework to make using alevin-fry and alevin-fry-ATAC even simpler."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/COMBINE-lab/simpleaf"
homepage = "https://simpleaf.readthedocs.io"
#documentation = "https://fry.readthedocs.io/en/latest/"
include = [
  "/src/*.rs",
  "/src/core/*.rs",
  "/src/utils/*.rs",
  "/src/utils/af_utils/*.rs",
  "/src/atac/*.rs",
  "/src/simpleaf_commands/*.rs",
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/LICENSE",
]
keywords = [
  "single-cell",
  "preprocessing",
  "RNA-seq",
  "single-nucleus",
  "ATAC-seq",
]
categories = ["command-line-utilities", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cc = "1.2.20"

# New seq_geom_parser 1.0 (chumsky-based, from piscem-rs workspace) — used for
# geometry validation and flex-quant. Patched to GitHub in .cargo/config.toml
# until published to crates.io.
seq_geom_parser = "1.1"
# Old seq_geom_parser 0.3.0 (pest-based) — still used by simpleaf quant for
# PiscemGeomDesc/SalmonGeomDesc command-line arg generation and FIFO transforms.
# Imported as `seq_geom_parser_legacy`. Will be migrated to 1.0 incrementally.
# Legacy seq_geom_parser 0.3.0 and seq_geom_xform removed — salmon single-cell
# mapping is deprecated, and piscem handles geometry strings directly.
# All geometry validation uses seq_geom_parser 1.0 (above).
roers = { version = "0.4.0" }
af-anndata = { version = "0.3.3" }

anyhow = "^1.0"
clap = { version = "4.5.37", features = [
  "derive",
  "cargo",
  "deprecated",
  "wrap_help",
  "help",
  "usage",
  "error-context",
] }
cmd_lib = "2.0.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = true, features = [
  "env-filter",
] }
semver = "^1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "^0.3.41", features = [
  "macros",
  "formatting",
  "parsing",
  "serde",
  "serde-human-readable",
] }
which = "8.0.2"
jrsonnet-evaluator = "=0.5.0-pre97"
jrsonnet-cli = "=0.5.0-pre97"
jrsonnet-parser = "=0.5.0-pre97"
thiserror = "2.0.12"
phf = { version = "0.13.1", features = ["macros"] }
chrono = "0.4.40"
tabled = "0.20.0"
csv = "1.3.1"
strum = { version = "0.28.0", features = ["derive", "phf"] }
strum_macros = "0.28.0"
niffler = { version = "3.0.0", default-features = false, features = ["gz"] }
flate2 = { version = "1.1.1", default-features = false, features = ["zlib-ng"] }
blake3 = { version = "1.8.2", features = ["mmap", "serde"] }
regex = { version = "1.11.1", default-features = false, features = [
  "perf",
  "std",
] }
tempfile = "3.19.1"
ureq = { version = "3.0.11", features = ["json"] }
file-requirements = "0.1.0"

[profile.release]
lto = "thin"
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
